Fix creating orders
