# db/schema.rb
@@ -10,7 +10,17 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2024_01_27_173646) do
+ActiveRecord::Schema[7.1].define(version: 2024_01_28_202934) do
+  create_table "items", charset: "utf8mb4", collation: "utf8mb4_0900_ai_ci", force: :cascade do |t|
+    t.bigint "pedido_id", null: false
+    t.string "nome"
+    t.text "observacao"
+    t.integer "quantidade"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["pedido_id"], name: "index_items_on_pedido_id"
+  end
+
   create_table "pedidos", charset: "utf8mb4", collation: "utf8mb4_0900_ai_ci", force: :cascade do |t|
     t.integer "num_pedido"
     t.integer "status"
@@ -19,4 +29,5 @@ ActiveRecord::Schema[7.1].define(version: 2024_01_27_173646) do
     t.index ["num_pedido"], name: "index_pedidos_on_num_pedido", unique: true
   end
 
+  add_foreign_key "items", "pedidos"
 end
